[tool.poetry]
name = "alma-fines"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
blinker = "^1.9.0"
certifi = "^2025.1.31"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
flask = "^3.1.0"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-metadata = "^8.5.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
packaging = "^24.2"
pycparser = "^2.22"
pyjwt = "^2.10.1"
pymemcache = "^4.0.0"
pynacl = "^1.5.0"
requests = "^2.32.3"
setuptools = "^75.6.0"
six = "^1.17.0"
urllib3 = "^2.2.3"
werkzeug = "^3.1.3"
wheel = "^0.45.1"
zipp = "^3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
